# AP1_MVC-project-cpp

./: CMakeLists.txt  DefinesAndTypedefs.h  main.cpp
Commands/: Command.h  CreateVariableCommand.cpp  CreateVariableCommand.h  TestPrintCommand.h
Commands/Variables/: Variable.cpp  Variable.h
Controller/: Controller.cpp  Controller.h  IController.h  VariablesMapContainer.cpp  VariablesMapContainer.h
Controller/Commands/: AssignExistingVarCommand.cpp  AssignExistingVarCommand.h  BindCommand.cpp  BindCommand.h  CalculateMathExpressionCommand.cpp  CalculateMathExpressionCommand.h  CreateVariableCommand.cpp  CreateVariableCommand.h  ICommand.h  IfCommand.cpp  IfCommand.h  OperatorCommand.cpp  OperatorCommand.h  SleepCommand.cpp  SleepCommand.h  TestPrintCommand.h  WhileLoopCommand.cpp  WhileLoopCommand.h
Controller/Commands/CommandsUtil/: CommandsUtil.cpp  CommandsUtil.h
Controller/Commands/Variables/: Variable.h
Controller/Math_Expressions_Handling/: MathExpressionsHandler.cpp  MathExpressionsHandler.h
Controller/Math_Expressions_Parsing/: MathExpressionsParser.cpp  MathExpressionsParser.h
Controller/Math_Expressions_Parsing/Utility/: UtilityFunctions.cpp  UtilityFunctions.h
Controller/Operators_Handler/: OperatorsHandler.cpp  OperatorsHandler.h
Controller/Utility/: UtilityFunctions.cpp  UtilityFunctions.h  VarData.cpp  VarData.h
File_Parsing/Consile_File_Reading/: Lexer.cpp  Lexer.h
File_Parsing/Parsing/: StringValidator.cpp  StringValidator.h
File_Parsing/Variables/: Variable.cpp  Variable.h
MathExpressions/: BaseExpression.h  BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Expression.h  main.cpp
MathExpressions/Exceptions/: IllegalAccessException.h  NotImplementedError.h
Server/: ICommand.h  IServer.h  MyTCPServer.cpp  MyTCPServer.h  TCPServer.cpp  TCPServer.h
Server/ClientHandler/: ClientHandler.cpp  ClientHandler.h  FlightGearClientHandler.cpp  FlightGearClientHandler.h  IClientHandler.h
Server/Controller/: Controller.cpp  Controller.h  IController.h  VariablesMapContainer.h
Server/Controller/Commands/: AssignExistingVarCommand.cpp  AssignExistingVarCommand.h  BindCommand.cpp  BindCommand.h  CreateVariableCommand.cpp  ICommand.h  IfCommand.h  OperatorCommand.cpp  OperatorCommand.h  SleepCommand.h  StartServerCommand.h  WhileLoopCommand.h
Server/Controller/Commands/ControllerCommands/: AssignExistingVarCommand.cpp  AssignExistingVarCommand.h  BindCommand.cpp  BindCommand.h  CalculateMathExpressionCommand.cpp  CalculateMathExpressionCommand.h  CreateVariableCommand.cpp  CreateVariableCommand.h  IControllerCommand.h  IfCommand.cpp  IfCommand.h  OperatorCommand.cpp  OperatorCommand.h  SleepCommand.cpp  SleepCommand.h  WhileLoopCommand.cpp  WhileLoopCommand.h
Server/Controller/Math_Expressions_Handling/: MathExpressionsHandler.h
Server/Controller/Operators_Handler/: OperatorsHandler.cpp  OperatorsHandler.h
Server/ServerHandlingCommands/: ServerHandlingCommand.h  StartServerCommand.cpp  StartServerCommand.h
Server/ServerOpenAndConnection/: ConnectToServer.cpp  ConnectToServer.h  ConnectToServerCommand.cpp  ConnectToServerCommand.h  ConnectToServerTask.cpp  ConnectToServerTask.h  IServerHandlingCommand.h  OpenServer.cpp  OpenServer.h  OpenServerTask.cpp  RunServerTask.h  StartServerCommand.cpp  StartServerCommand.h
Server/ThreadPool/: MyThreadLock.h  PoolWorkerThread.cpp  PoolWorkerThread.h  Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  WorkQueue.cpp  WorkQueue.h
Shared_Data/: CommandData.cpp  CommandData.h  CommandResult.h  Lexer.cpp  Lexer.h  Message.h  Notification.h
Utilities/: easylogging++.cc  easylogging++.h
Utilities/Reference_Counting/: ReferenceCount.h  SmartPtr.h
Utility/: GenericFunctions.cpp  GenericFunctions.h  Lexer.cpp  Lexer.h  README.txt  UtilityFunctions.cpp  UtilityFunctions.h  VarData.cpp  VarData.h
View/: Client.cpp  Client.h  FlightGearClient.h  IClient.h  UserClient.cpp  UserClient.h
